--- a/SciCalc/SciCalc/SciCalc/Views/CalculatorPage.xaml
+++ b/SciCalc/SciCalc/SciCalc/Views/CalculatorPage.xaml
@@ -3,10 +3,84 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SciCalc.Views.CalculatorPage"
              Title="CalculatorPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI! Calculator Page"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+
+    <Grid
+        RowDefinitions="*,68,48,44,44,48,64,64,64,64"
+        ColumnDefinitions="*,*,*,*,*">
+        
+        <!--Color Answer Row-->
+        <BoxView 
+            VerticalOptions="Fill"
+            HorizontalOptions="Fill"
+            BackgroundColor="#262D37"
+            Grid.Row="1"
+            Grid.ColumnSpan="5"/>
+        
+        <!--Color Scientific Rows-->
+        <BoxView 
+            VerticalOptions="Fill"
+            HorizontalOptions="Fill"
+            BackgroundColor="#2C3240"
+            Grid.Row="2"
+            Grid.RowSpan="4"
+            Grid.ColumnSpan="5"/>
+        
+        <!--input area-->
+        <Frame
+            HasShadow="False"
+            Padding="6,0,4,0"
+            Margin="12"
+            BorderColor="{StaticResource PrimaryColor}"
+            BackgroundColor="#2C3240"
+            HorizontalOptions="EndAndExpand"
+            VerticalOptions="EndAndExpand"
+            Grid.Row="0"
+            Grid.Column="0"
+            Grid.ColumnSpan="5">
+            <Label
+                LineHeight="1.5"
+                VerticalTextAlignment="Center"
+                VerticalOptions="Center">
+                <Label.FormattedText>
+                    <FormattedString>
+                        <Span Text="{Binding InputText}" Style="{StaticResource InputBoxLabelStyles}" />
+                    </FormattedString>
+                </Label.FormattedText>
+            </Label>
+        </Frame>
+        
+        <!--Answer Row-->
+        <Grid
+            ColumnDefinitions="Auto,*"
+            Grid.Row="1"
+            Grid.Column="0"
+            Grid.ColumnSpan="5">
+            <Label
+                Text="="
+                VerticalOptions="Center"
+                VerticalTextAlignment="Center"
+                Style="{StaticResource EqualsLabelStyles}"
+                Margin="16,0"/>
+
+            <Label 
+                Text="{Binding CalculatedResult, Mode=OneWay}"
+                VerticalOptions="Center"
+                VerticalTextAlignment="Center"
+                HorizontalOptions="End"
+                Grid.Column="1"
+                Style="{StaticResource ResultLabelStyles}"
+                Margin="16,0"/>
+        </Grid>
+        
+        <!--Scientific Operators-->
+        <!--Row-->
+        <Button 
+            Grid.Row="2"
+            Grid.Column="0"
+            ZIndex="1"
+            Margin="6,10,6,4"
+            Style="{StaticResource ScientificOperatorButtonStyle}"
+            Text="MEAN" />
+
+    </Grid>
 </ContentPage>
